--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2164,7 +2164,7 @@ input, select, textarea {
 	#footer {
 		margin-left: 375px;
 		text-align: center;
-		background-color: #dce3e2;
+		background-color: #ffffff;
 		padding: 3em 0 4em 0;
 		box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.05), inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.025);
 		font-size: 0.8em;
@@ -2239,15 +2239,15 @@ input, select, textarea {
 			}
 
 			#main > section.two {
-				background-color: #f5fafa;
+				background-color: #f5f1f8;
 			}
 
 			#main > section.three {
-				background-color: #ecf1f1;
+				background-color: #ffffff;
 			}
 
 			#main > section.four {
-				background-color: #e8edec;
+				background-color: #f5f1f8;
 			}
 
 /* Wide */
