--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1947,7 +1947,7 @@ input, select, textarea {
 		border-radius: 0.35em;
 		color: #fff !important;
 		text-decoration: none;
-		padding: 0.75em 2.5em 0.75em 2.5em;
+		padding: 0.25em 2.5em 0.25em 2.5em;
 		background-color: #b9b5c5;
 		border: 0;
 		cursor: pointer;
@@ -1987,7 +1987,7 @@ input, select, textarea {
 		.item header {
 			background: #fff;
 			margin: 0;
-			padding: 1em 0 1em 0;
+			padding: 0em 0 0em 0;
 			font-size: 0.8em;
 		}
 
@@ -2165,7 +2165,7 @@ input, select, textarea {
 		margin-left: 375px;
 		text-align: center;
 		background-color: #ffffff;
-		padding: 3em 0 4em 0;
+		padding: 1em 0 0em 0;
 		box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.05), inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.025);
 		font-size: 0.8em;
 	}
@@ -2228,13 +2228,13 @@ input, select, textarea {
 					}
 
 			#main > section.cover {
-				padding: 10em 0;
+				padding: 15em 0;
 				background-size: cover;
 				background-position: center center;
 			}
 
 			#main > section.one {
-				background-color: #81918E;
+				background-color: rgb(255, 255, 255);
 				background-image: url("../../images/banner.jpg");
 			}
 
