--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1869,7 +1869,7 @@ input, select, textarea {
 		form input[type="password"]:focus,
 		form select:focus,
 		form textarea:focus {
-			box-shadow: 0 0 2px 1px #8ebebc;
+			box-shadow: 0 0 2px 1px #9892b9;
 			background: #fff;
 		}
 
@@ -2032,8 +2032,8 @@ input, select, textarea {
 		-webkit-justify-content: space-between;
 		-ms-justify-content: space-between;
 		justify-content: space-between;
-		background: #222629 url("images/overlay.png");
-		box-shadow: inset -0.25em 0 0.25em 0 rgba(0, 0, 0, 0.1);
+		background: #1f1e20 url("images/overlay.png");
+		box-shadow: inset -0.05em 0 0.0em 0 rgba(90, 90, 90, 0.05);
 		color: rgb(255, 255, 255);
 		height: 100%;
 		left: 0;
@@ -2070,7 +2070,7 @@ input, select, textarea {
 		}
 
 			#header .icons a {
-				color: #41484c;
+				color: #45414c;
 				-moz-transition: color 0.35s ease-in-out;
 				-webkit-transition: color 0.35s ease-in-out;
 				-ms-transition: color 0.35s ease-in-out;
@@ -2078,7 +2078,7 @@ input, select, textarea {
 			}
 
 				#header .icons a:hover {
-					color: #fff;
+					color: #b5acce;
 				}
 
 	#logo {
@@ -2228,26 +2228,26 @@ input, select, textarea {
 					}
 
 			#main > section.cover {
-				padding: 15em 0;
+				padding: 10em 0;
 				background-size: cover;
 				background-position: center center;
 			}
 
 			#main > section.one {
-				background-color: rgb(255, 255, 255);
+				background-color: #1f1e20;
 				background-image: url("../../images/banner.jpg");
 			}
 
 			#main > section.two {
-				background-color: #f5f1f8;
+				background-color: #1f1e20;
 			}
 
 			#main > section.three {
-				background-color: #ffffff;
+				background-color: #1f1e20;
 			}
 
 			#main > section.four {
-				background-color: #f5f1f8;
+				background-color: #1f1e20;
 			}
 
 /* Wide */
@@ -2436,8 +2436,8 @@ input, select, textarea {
 				}
 
 				#header .bottom {
-					border-top: solid 1px rgba(255, 255, 255, 0.05);
-					box-shadow: 0 -1px 0 0 rgba(0, 0, 0, 0.15);
+					border-top: solid 1px rgba(255, 255, 255, 0);
+					box-shadow: 0 -1px 0 0 rgba(0, 0, 0, 0.10);
 					padding-top: 2em;
 					margin-top: 2em;
 					position: relative;
@@ -2490,14 +2490,14 @@ input, select, textarea {
 						color: #fff;
 						font-size: 18px;
 						line-height: 2.25em;
-						background: rgba(128, 136, 144, 0.5);
+						background: #1f1e20e7;
 						border-radius: 0.35em;
 						text-align: center;
 						position: absolute;
-						left: 0.5em;
+						left: -0.5em;
 						top: 0.5em;
 						display: block;
-						width: 3.25em;
+						width: 3em;
 						height: 2.25em;
 						line-height: 2.25em;
 					}
