--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1852,10 +1852,10 @@ input, select, textarea {
 		border: 0;
 		outline: 0;
 		background: #fff;
-		background: rgba(255, 255, 255, 0.75);
+		background: #e7e1eef3;
 		width: 100%;
-		border-radius: 0.35em;
-		padding: 0.75em 1em 0.75em 1em;
+		border-radius: 0.1em;
+		padding: 0.1em .5em 0.1em .5em;
 		box-shadow: inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.05);
 		border: solid 1px rgba(0, 0, 0, 0.15);
 		-moz-transition: all 0.35s ease-in-out;
@@ -1881,7 +1881,7 @@ input, select, textarea {
 	}
 
 	form textarea {
-		min-height: 14em;
+		min-height: 13em;
 	}
 
 	form ::-webkit-input-placeholder {
@@ -1944,14 +1944,14 @@ input, select, textarea {
 	.button {
 		position: relative;
 		display: inline-block;
-		border-radius: 0.35em;
+		border-radius: 0.1em;
 		color: #fff !important;
 		text-decoration: none;
-		padding: 0.25em 2.5em 0.25em 2.5em;
-		background-color: #b9b5c5;
+		padding: 0.2em 2em 0.2em 2em;
+		background-color: #9892b9ab;
 		border: 0;
 		cursor: pointer;
-		background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15)), url("images/overlay.png");
+		background-image: -moz-linear-gradient(top, rgba(3, 3, 3, 0), rgba(0, 0, 0, 0.15)), url("images/overlay.png");
 		background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15)), url("images/overlay.png");
 		background-image: -ms-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15)), url("images/overlay.png");
 		background-image: linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15)), url("images/overlay.png");
