--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -88,7 +88,7 @@ input, select, textarea {
 		font-size: 19pt;
 		font-weight: 300;
 		line-height: 1.75em;
-		color: #888;
+		color: rgb(184, 183, 183);
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -106,14 +106,14 @@ input, select, textarea {
 		font-family: 'Source Sans Pro', sans-serif;
 		font-size: 19pt;
 		font-weight: 300;
-		line-height: 1.75em;
+		line-height: 1.25em;
 		color: #888;
 	}
 
 	h1, h2, h3, h4, h5, h6 {
 		font-weight: 300;
 		color: rgb(255, 255, 255);
-		line-height: 1.5em;
+		line-height: 1.25em;
 	}
 
 	h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
@@ -1757,7 +1757,7 @@ input, select, textarea {
 		.image.avatar48 {
 			width: 48px;
 			height: 48px;
-			background: #f00;
+			background: rgb(0, 0, 0);
 		}
 
 			.image.avatar48 img {
@@ -1945,7 +1945,7 @@ input, select, textarea {
 		position: relative;
 		display: inline-block;
 		border-radius: 0.1em;
-		color: #fff !important;
+		color: rgb(214, 214, 214) !important;
 		text-decoration: none;
 		padding: 0.2em 2em 0.2em 2em;
 		background-color: #9892b9ab;
@@ -1985,14 +1985,15 @@ input, select, textarea {
 	}
 
 		.item header {
-			background: #fff;
+			background: #fafafae8;
 			margin: 0;
 			padding: 0em 0 0em 0;
 			font-size: 0.8em;
 		}
 
 			.item header h3 {
-				font-size: 1em;
+				font-size: .9em;
+				color: #45414c
 			}
 
 /* Icons */
