--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2428,7 +2428,7 @@ input, select, textarea {
 				width: 275px;
 				z-index: 10002;
 				width: 275px;
-				background: #222729 url("images/overlay.png");
+				background: #1f1e20 url("images/overlay.png");
 				box-shadow: inset -0.25em 0 0.25em 0 rgba(0, 0, 0, 0.125);
 			}
 
@@ -2438,7 +2438,7 @@ input, select, textarea {
 
 				#header .bottom {
 					border-top: solid 1px rgba(255, 255, 255, 0);
-					box-shadow: 0 -1px 0 0 rgba(0, 0, 0, 0.10);
+					box-shadow: 0 -.5px 0 0 rgba(0, 0, 0, 0.10);
 					padding-top: 2em;
 					margin-top: 2em;
 					position: relative;
@@ -2491,7 +2491,7 @@ input, select, textarea {
 						color: #fff;
 						font-size: 18px;
 						line-height: 2.25em;
-						background: #1f1e20e7;
+						background: #3b393dd3;
 						border-radius: 0.35em;
 						text-align: center;
 						position: absolute;
