--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2235,6 +2235,7 @@ input, select, textarea {
 			}
 
 			#main > section.one {
+				height: fit-content
 				background-color: #1f1e20;
 				background-image: url("../../images/pic08.jpg");
 			}
