--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -142,6 +142,22 @@ input, select, textarea {
 		font-size: 1.5em;
 	}
 
+	h4 {
+		font-size: 1.1em
+	}
+
+	h5 {
+		font-size: 1em
+	}
+
+		h5.alt {
+			color: #666
+		}
+
+			h5.alt strong {
+				color: #888
+			}
+
 	header {
 		margin: 0 0 2em 0;
 	}
@@ -2237,7 +2253,6 @@ input, select, textarea {
 			#main > section.one {
 				background-color: #1f1e20;
 				background-image: url("../../images/pic08.jpg");
-				height: 100% 
 			}
 
 			#main > section.two {
