--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1773,12 +1773,11 @@ input, select, textarea {
 		.image.avatar48 {
 			width: 48px;
 			height: 48px;
-			background: rgb(0, 0, 0);
+			background: #1f1e20;
 		}
 
 			.image.avatar48 img {
-				width: 48px;
-				height: 48px;
+				border-radius: 50%
 			}
 
 		.image.fit {
