--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -143,11 +143,11 @@ input, select, textarea {
 	}
 
 	h4 {
-		font-size: 1.1em
+		font-size: 1em
 	}
 
 	h5 {
-		font-size: 1em
+		font-size: .8em
 	}
 
 		h5.alt {
@@ -2251,7 +2251,8 @@ input, select, textarea {
 
 			#main > section.one {
 				background-color: #1f1e20;
-				background-image: url("../../images/pic08.jpg");
+				background-image: url("../../images/banner.jpg");
+				height: 33em
 			}
 
 			#main > section.two {
