--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -145,6 +145,13 @@ input, select, textarea {
 	h4 {
 		font-size: 1em
 	}
+		h4.alt {
+			color: #666
+		}
+
+			h4.alt strong {
+				color: rgb(184, 183, 183)
+			}
 
 	h5 {
 		font-size: .8em
