--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -83,13 +83,12 @@ input, select, textarea {
 	}
 
 	body {
-		background: #fff;
+		background: rgba(255, 255, 255, 0.589);
 		font-family: 'Source Sans Pro', sans-serif;
 		font-size: 19pt;
 		font-weight: 300;
 		line-height: 1.75em;
 		color: rgb(184, 183, 183);
-		text-align: center
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
