--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -83,7 +83,7 @@ input, select, textarea {
 	}
 
 	body {
-		background: rgba(255, 255, 255, 0.589);
+		background: #fff;
 		font-family: 'Source Sans Pro', sans-serif;
 		font-size: 19pt;
 		font-weight: 300;
@@ -143,7 +143,7 @@ input, select, textarea {
 	}
 
 	h4 {
-		font-size: 1em
+		font-size: 1em;
 	}
 		h4.alt {
 			color: #666
