--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -165,6 +165,12 @@ input, select, textarea {
 				color: #888
 			}
 
+	h6 {
+		font-size: 19pt; 
+		font-weight: 370;
+	}
+		
+
 	header {
 		margin: 0 0 2em 0;
 	}
