--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2052,7 +2052,7 @@ input, select, textarea {
 		color: rgb(214, 214, 214) !important;
 		text-decoration: none;
 		padding: 0.2em 2em 0.2em 2em;
-		background-color: #8383af60;
+		background-color: #4b4455;
 		border: 0;
 		cursor: pointer;
 		background-image: -moz-linear-gradient(top, rgba(3, 3, 3, 0), rgba(0, 0, 0, 0.15)), url("images/overlay.png");
@@ -2070,7 +2070,7 @@ input, select, textarea {
 		input[type="reset"]:hover,
 		button:hover,
 		.button:hover {
-			background-color: #8383af9c;
+			background-color: #635b71;
 		}
 
 		input[type="button"]:active,
@@ -2078,7 +2078,7 @@ input, select, textarea {
 		input[type="reset"]:active,
 		button:active,
 		.button:active {
-			background-color: #9292b9;
+			background-color: #a39cb0;
 		}
 
 /* Item */
@@ -2175,7 +2175,7 @@ input, select, textarea {
 		}
 
 			#header .icons a {
-				color: #3c3c5db0;
+				color: #4b4455;
 				-moz-transition: color 0.35s ease-in-out;
 				-webkit-transition: color 0.35s ease-in-out;
 				-ms-transition: color 0.35s ease-in-out;
@@ -2248,7 +2248,7 @@ input, select, textarea {
 					#nav ul li a span:before {
 						position: absolute;
 						left: 0;
-						color: #3c3c5db0;
+						color: #4b4455;
 						text-align: center;
 						width: 1.25em;
 						line-height: 1.75em;
