--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1956,7 +1956,7 @@ input, select, textarea {
 		border: 0;
 		outline: 0;
 		background: #fff;
-		background: #efeff5;
+		background: #e4e2e9;
 		width: 100%;
 		border-radius: 0.1em;
 		padding: 0.1em .5em 0.1em .5em;
@@ -1973,7 +1973,7 @@ input, select, textarea {
 		form input[type="password"]:focus,
 		form select:focus,
 		form textarea:focus {
-			box-shadow: 0 0 2px 1px #a2a2c3;
+			box-shadow: 0 0 2px 1px #a29bb0;
 			background: #fff;
 		}
 
