--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -85,7 +85,7 @@ input, select, textarea {
 	body {
 		background: #fff;
 		font-family: 'Source Sans Pro', sans-serif;
-		font-size: 19pt;
+		font-size: 18pt;
 		font-weight: 300;
 		line-height: 1.75em;
 		color: rgb(184, 183, 183);
@@ -104,7 +104,7 @@ input, select, textarea {
 
 	input, textarea, select {
 		font-family: 'Source Sans Pro', sans-serif;
-		font-size: 19pt;
+		font-size: 18pt;
 		font-weight: 300;
 		line-height: 1.25em;
 		color: #888;
@@ -126,8 +126,9 @@ input, select, textarea {
 		}
 
 	h2 {
-		font-size: 1.8em;
-		letter-spacing: -1px;
+		font-size: 1.5em;
+		letter-spacing: 2px;
+		
 	}
 
 		h2.alt {
@@ -139,25 +140,36 @@ input, select, textarea {
 			}
 
 	h3 {
-		font-size: 1.2em;
+		font-size: 1.25em;
+		
 	}
 		h3.alt {
-			color:rgb(189, 189, 189)
+			color:rgb(189, 189, 189);
+			letter-spacing: .5px;
+		}
+
+		h3.alt strong {
+			color: rgb(255, 255, 255);
+			font-size: 1em;
+			line-height: 3.5em;
+			letter-spacing: 1px;
 		}
 
 	h4 {
 		font-size: 1em;
+		letter-spacing: 0px;
 	}
 		h4.alt {
 			color: #666
 		}
 
 			h4.alt strong {
-				color: rgb(184, 183, 183)
+				color: rgb(184, 183, 183);
+				line-height: 1.8em;
 			}
 
 	h5 {
-		font-size: .8em
+		font-size: .9em
 	}
 
 		h5.alt {
@@ -165,7 +177,8 @@ input, select, textarea {
 		}
 
 			h5.alt strong {
-				color: rgb(151, 151, 151)
+				color: rgb(151, 151, 151);
+				line-height: 1.3em;
 			}
 
 	h6 {
@@ -1893,7 +1906,7 @@ input, select, textarea {
 		.image.featured {
 			display: block;
 			width: 100%;
-			margin: 0 0 2em 0;
+			margin: 0 0 3em 0;
 		}
 
 		.image.left {
@@ -2370,7 +2383,7 @@ input, select, textarea {
 
 			#main > section.three {
 				background-color: #19171cf8;
-				padding: 0em 0em 3.5em;
+				padding: 0em 0em 4.5em 0;
 			
 			}
 
@@ -2385,7 +2398,7 @@ input, select, textarea {
 		/* Basic */
 
 			body, input, textarea, select {
-				font-size: 17pt;
+				font-size: 16pt;
 			}
 
 		/* Header */
@@ -2431,7 +2444,7 @@ input, select, textarea {
 		/* Basic */
 
 			body, input, textarea, select {
-				font-size: 16pt;
+				font-size: 15pt;
 			}
 
 			.container {
