--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1893,7 +1893,7 @@ input, select, textarea {
 		.image.avatar48 {
 			width: 48px;
 			height: 48px;
-			background: #1f1e20;
+			background: #000000;
 		}
 
 			.image.avatar48 img {
@@ -2086,10 +2086,11 @@ input, select, textarea {
 		border-radius: 0.1em;
 		color: rgb(214, 214, 214) !important;
 		text-decoration: none;
-		padding: 0.2em 2em 0.2em 2em;
-		background-color: #4b4455;
-		border: 0;
-		cursor: pointer;
+		padding: 0.2em 2em 0.4em 2em;
+		background-color: #4b445517;
+		border-width: 1px;
+		border-color: #d8d5dd2d; 
+		cursor: pointer; 
 		background-image: -moz-linear-gradient(top, rgba(3, 3, 3, 0), rgba(0, 0, 0, 0.15)), url("images/overlay.png");
 		background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15)), url("images/overlay.png");
 		background-image: -ms-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15)), url("images/overlay.png");
@@ -2105,7 +2106,7 @@ input, select, textarea {
 		input[type="reset"]:hover,
 		button:hover,
 		.button:hover {
-			background-color: #635b71;
+			background-color: #635b71e1;
 		}
 
 		input[type="button"]:active,
@@ -2113,7 +2114,7 @@ input, select, textarea {
 		input[type="reset"]:active,
 		button:active,
 		.button:active {
-			background-color: #a39cb0;
+			background-color: #a39cb0f3;
 		}
 
 /* Item */
@@ -2172,7 +2173,7 @@ input, select, textarea {
 		-webkit-justify-content: space-between;
 		-ms-justify-content: space-between;
 		justify-content: space-between;
-		background: #19171cf8;
+		background: #000000;
 		box-shadow: inset -0.08em 0 0.0em 0 rgba(0, 0, 0, 0.05);
 		color: rgb(255, 255, 255);
 		height: 100%;
@@ -2304,7 +2305,7 @@ input, select, textarea {
 	#footer {
 		margin-left: 375px;
 		text-align: center;
-		background-color: #ffffff;
+		background-color: #000000;
 		padding: 1em 0 0em 0;
 		box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.05), inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.025);
 		font-size: 0.8em;
@@ -2374,23 +2375,23 @@ input, select, textarea {
 			}
 
 			#main > section.one {
-				background-color: #1e1e2f;
+				background-color: #000000;
 				background-image: url("../../images/banner.jpg");
 				height: 100vh;
 			}
 
 			#main > section.two {
-				background-color: #19171c;
+				background-color: #000000;
 			}
 
 			#main > section.three {
-				background-color: #19171cf8;
+				background-color: #0c0b0e;
 				padding: 0em 0em 4.5em 0;
 			
 			}
 
 			#main > section.four {
-				background-color: #19171c;
+				background-color: #000000;
 			}
 
 /* Wide */
@@ -2570,7 +2571,7 @@ input, select, textarea {
 				width: 275px;
 				z-index: 10002;
 				width: 275px;
-				background: #19171cf8;
+				background: #000000;
 				box-shadow: inset -0.1em 0 0.1em 0 rgba(0, 0, 0, 0.125);
 			}
 
@@ -2633,7 +2634,7 @@ input, select, textarea {
 						color: #fff;
 						font-size: 18px;
 						line-height: 2.25em;
-						background: #19171cf8;
+						background: #000000;
 						border-radius: .2em;
 						text-align: center;
 						position: absolute;
